tests/baselines/reference/sourceMapValidationForIn.errors.txt
==== tests/cases/compiler/sourceMapValidationForIn.ts (4 errors) ====
    for (var x in String) {
        WScript.Echo(x);
        ~~~~~~~
!!! error TS2095: Could not find symbol 'WScript'.
    }
    for (x in String) {
        WScript.Echo(x);
        ~~~~~~~
!!! error TS2095: Could not find symbol 'WScript'.
    }
    for (var x2 in String)
    {
        WScript.Echo(x2);
        ~~~~~~~
!!! error TS2095: Could not find symbol 'WScript'.
    }
    for (x in String)
    {
        WScript.Echo(x);
        ~~~~~~~
!!! error TS2095: Could not find symbol 'WScript'.
    }